@startuml

title __SECURITY's Class Diagram__\n

  namespace br.com.apibancaria {
    namespace security {
      class br.com.apibancaria.security.JwtAuthenticationFilter {
          + JwtAuthenticationFilter()
          # doFilterInternal()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace security {
      class br.com.apibancaria.security.JwtService {
          - secret : String
          + extrairEmail()
          + gerarToken()
          + validarToken()
          - getSignKey()
      }
    }
  }
  

  namespace br.com.apibancaria {
    namespace security {
      class br.com.apibancaria.security.SecurityConfig {
          + SecurityConfig()
          + passwordEncoder()
          + securityFilterChain()
      }
    }
  }
  

  br.com.apibancaria.security.JwtAuthenticationFilter -up-|> org.springframework.web.filter.OncePerRequestFilter
  br.com.apibancaria.security.JwtAuthenticationFilter o-- br.com.apibancaria.repository.ClienteRepository : clienteRepository
  br.com.apibancaria.security.JwtAuthenticationFilter o-- br.com.apibancaria.security.JwtService : service
  br.com.apibancaria.security.SecurityConfig o-- br.com.apibancaria.security.JwtAuthenticationFilter : jwtAuthenticationFilter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
